  and created IProcessor, the interface implemented by any processor object of any kind
  (which can now apply of any type of DOM node, and not only Tags). "Attribute Processors"
  and "Tag Processors" are now specializations of IProcessors.
- Redefined ITextInliner objects (text, javascript, dart inliners) as Processors for
  Text and CDATASection nodes. "Inlining" is now a Standard-Dialect feature and not a Thymeleaf
  core engine one.
- Removed the IApplicability class hierarchy and substituted by a much simpler 
  and general IProcessorMatcher interface and implementations.
- (differences in Template resolver and resource resolver APIs)
- (differences in Arguments)
- Added a new "all-but-first" value to "th:remove" that removes all children tags
  except the first one.
  


1.1.4
=====
- Solved bug regarding the initialization of expression utility objects that prevented
  the "#object" variable to change accordingly when a th:object attribute was specified,
  thus raising an exception when executing valid expressions on it.


1.1.3
=====
- Modified WebContext constructors so that they require now the ServletContext 
  object. This enables Thymeleaf to operate without depending at all
  on creating an HTTP session object for the user executing the template.
- Modified TemplateProcessingException exception hierarchy in order to include
  template information and (future) location data.
- Created org.thymeleaf.util.CacheMap generic cache class and refactored all other
  caches throughout the library to use this class. Also, a new logger called
  org.thymeleaf.TemplateEngine.CACHE has been declared for this class.
- Refactored Parsed Template Cache as an org.thymeleaf.util.CacheMap object, and
  removed "org.thymeleaf.TemplateEngine.PARSERCACHE" specific logger 
  (org.thymeleaf.TemplateEngine.CACHE should be used instead).


1.1.2
=====
- Minor fixing in StandardTextInliner for empty Text nodes.